# Code-Exercise

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
data/: predicciones_con_seller_id.csv
models/tree-based/: label_encoder.pkl
notebooks/: 01_data_ingestion.ipynb  02_eda.ipynb  02_eda_new_or_used.ipynb  03_data_preparation.ipynb  04_model_training.ipynb
src/itemclassifier/: __init__.py  __main__.py  stage_01_data_ingestion.py  stage_02_model_training.py  stage_03_model_evaluation.py
tests/: test_data_ingestion.py  test_model_training.py
