[project]
name = "itemclassifier"
version = "0.1.0"
description = ""
authors = [
    {name = "lhgarciadev", email = "garcia.shk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "numpy (>=1.24,<2.0)",
    "notebook>=7.3.3,<8.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "joblib (>=1.4.2,<2.0.0)",
    "scikit-learn==1.3.2",            
    "scikeras==0.12.0",               
    "xgboost>=1.7.6,<2.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "tensorflow>=2.12.0,<2.15.0",
    "catboost (>=1.2.7,<2.0.0)",
    "mlflow (>=2.21.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "nltk (>=3.9.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "itemclassifier", from = "src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
